// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factsheet should render correctly 1`] = `
<div
  className="factsheet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="factsheet__item"
  >
    Creation date: 
    Invalid Date
    <br />
    Total number of shares: 
    1.0000
    <br />
    Shares owned by me:
     
    1.0000
  </div>
  <div
    className="factsheet__item"
  >
    Management Reward: 
    0
    %
    <br />
    Performance Reward: 
    0
    %
  </div>
  <div
    className="factsheet__item"
  >
    <a
      href="https://ipfs.io/ipfs/Qmc9JRw4zarrs6gJwu6tC58UAgeEujNg9VMWcH8MUEd5TW/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Contact Investors/Managers
    </a>
    <br />
    <Link
      href="https://melon-reporting.now.sh/report/"
    >
      <a
        rel="noopener noreferrer"
        target="_blank"
      >
        Generate fund report
      </a>
    </Link>
  </div>
</div>
`;

exports[`Factsheet should render correctly with isCompetition 1`] = `
<div
  className="factsheet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="factsheet__item"
  >
    Creation date: 
    Invalid Date
    <br />
    Total number of shares: 
    1.0000
    <br />
    Shares owned by me:
     
    1.0000
  </div>
  <div
    className="factsheet__item"
  >
    Management Reward: 
    0
    %
    <br />
    Performance Reward: 
    0
    %
  </div>
  <div
    className="factsheet__item"
  >
    <a
      href="https://ipfs.io/ipfs/Qmc9JRw4zarrs6gJwu6tC58UAgeEujNg9VMWcH8MUEd5TW/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Contact Investors/Managers
    </a>
    <br />
    <Link
      href="https://melon-reporting.now.sh/report/"
    >
      <a
        rel="noopener noreferrer"
        target="_blank"
      >
        Generate fund report
      </a>
    </Link>
  </div>
</div>
`;

exports[`Factsheet should render correctly with loading 1`] = `
<div
  className="factsheet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="factsheet__spinner"
  >
    <Spinner
      icon={true}
      size="small"
    />
  </div>
</div>
`;
